--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="main-content">
-    <header class="section sec1 header active">
+    <header class="section sec1 header active" data-id="home">
         
     </header>
     <main>
-        <section class="section sec2 about"></section>
-        <section class="section sec3 portfolio"></section>
-        <section class="section sec4 blogs"></section>
-        <section class="section sec5 contact"></section>
+        <section class="section sec2 about" data-id="about"></section>
+        <section class="section sec3 portfolio" data-id="portfolio"></section>
+        <section class="section sec4 blogs" data-id="blogs"></section>
+        <section class="section sec5 contact" data-id="contact"></section>
     </main>
     <div class="controlls">
-        <div class="control control-1 active-btn">
+        <div class="control control-1 active-btn" data-id="home">
             <i class="fa-solid fa-house"></i>
         </div>
         <div class="control control-2 " data-id="about">
@@ -38,5 +38,6 @@
             <i class="fa-solid fa-evernote-open"></i>
         </div>
     </div>
+    <script src="js/app.js"></script>
 </body>
 </html>
