Make the header section add an image h1 and content

--- a/index.html
+++ b/index.html
@@ -13,7 +13,29 @@
 </head>
 <body class="main-content">
     <header class="section sec1 header active" data-id="home">
-        
+        <div class="header-content">
+            <div class="left-header">
+                <div class="h-shape"></div>
+                <div class="image">
+                    <img src="./img/hero.png" alt="">
+                </div>
+            </div>
+            <div class="right-header">
+                <h1 class="name">
+                    Hi. I'm <span>Daniel Jr Puente Martinez</span>
+                    A Web Developer.
+                </h1>
+                <p>
+                    I'm a web Developer, I love to create beautiful and functional websites.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia laboriosam ea 
+                    veniam aliquid doloribus, quas officiis porro, architecto deleniti inventore illum impedit magni.
+                </p>
+                <a href="" class="main-btn">
+                    <span class="btn-text">Dowload CV</span>
+                    <span class="botn-icon"><i class="fas fa-download"></i></span>
+                </a>
+            </div>
+        </div>
     </header>
     <main>
         <section class="section sec2 about" data-id="about"></section>
