--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia laboriosam ea 
                     veniam aliquid doloribus, quas officiis porro, architecto deleniti inventore illum impedit magni.
                 </p>
-                <a href="" class="main-btn">
-                    <span class="btn-text">Dowload CV</span>
-                    <span class="botn-icon"><i class="fas fa-download"></i></span>
-                </a>
+                <div class="btn-con">
+                    <a href="" class="main-btn">
+                        <span class="btn-text">Dowload CV</span>
+                        <span class="btn-icon"><i class="fas fa-download"></i></span>
+                    </a>
+                </div>
             </div>
         </div>
     </header>
