--- a/index.html
+++ b/index.html
@@ -40,7 +40,49 @@
         </div>
     </header>
     <main>
-        <section class="section sec2 about" data-id="about"></section>
+        <section class="section sec2 about" data-id="about">
+            <div class="main-title">
+                <h2>About <span>Me</span><span class="bg-text">my stats</span> </h2>
+            </div>
+            <div class="about-container">
+                <div class="left-about">
+                    <h4>Information about me</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis asperiores accusantium perferendis ea labore magni deserunt at nihil alias! Cum qui quaerat accusamus ipsam expedita ratione exercitationem, quibusdam voluptatum harum?<br></br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa dolores ut repellendus consequuntur praesentium officiis totam eaque ab, rem quibusdam quaerat, mollitia molestias accusamus? Sint nostrum saepe magni reiciendis eos.</p>
+                    <div class="btn-con">
+                        <a href="" class="main-btn">
+                            <span class="btn-text">Dowload CV</span>
+                            <span class="btn-icon"><i class="fas fa-download"></i></span>
+                        </a>
+                    </div>
+                </div>
+                <div class="rigth-about">
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">560+</p>
+                            <p class="small-text">Proyects <br />Completed</p>
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">560+</p>
+                            <p class="small-text">Proyects <br />Completed</p>
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">560+</p>
+                            <p class="small-text">Proyects <br />Completed</p>
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">560+</p>
+                            <p class="small-text">Proyects <br />Completed</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="section sec3 portfolio" data-id="portfolio"></section>
         <section class="section sec4 blogs" data-id="blogs"></section>
         <section class="section sec5 contact" data-id="contact"></section>
