--- a/index.html
+++ b/index.html
@@ -82,6 +82,47 @@
                     </div>
                 </div>
             </div>
+            <div class="about-stats">
+                <h4 class="stat-title">My Skills</h4>
+                <div class="progress-bars">
+                    <div class="progress-bar">
+                        <p class="prog-title">Html5</p>
+                        <div class="progress-con">
+                            <p class="prog-text">90%</p>
+                            <div class="progres">
+                                <span class="html"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">Html5</p>
+                        <div class="progress-con">
+                            <p class="prog-text">90%</p>
+                            <div class="progres">
+                                <span class="html"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">Html5</p>
+                        <div class="progress-con">
+                            <p class="prog-text">90%</p>
+                            <div class="progres">
+                                <span class="html"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">Html5</p>
+                        <div class="progress-con">
+                            <p class="prog-text">90%</p>
+                            <div class="progres">
+                                <span class="html"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="section sec3 portfolio" data-id="portfolio"></section>
         <section class="section sec4 blogs" data-id="blogs"></section>
