Make styles from portfolio items and coment control blog section button from html

--- a/index.html
+++ b/index.html
@@ -119,12 +119,41 @@
                             <div class="progres">
                                 <span class="html"></span>
                             </div>
+                            
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="section sec3 portfolio" data-id="portfolio"></section>
+        <section class="section sec3 portfolio" data-id="portfolio">
+            <div class="main-title">
+                <h2>My <span>Portfolio</span><span class="bg-text">My work</span></h2>
+                <p class="port-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos animi nobis sint molestias fugit, voluptas corporis. Similique inventore esse adipisci error laborum sit voluptatem, aspernatur accusantium nobis, voluptates corporis repellendus?
+                </p>
+                <div class="portfolios">
+                    <div class="portfolio-item">
+                        <div class="image">
+                            <img src="./img/port1.jpg" alt="">
+                        </div>
+                        <div class="hover-items">
+                            <h3>Proyect Source</h3>
+                            <div class="icons">
+                                <a href="www.google.com" class="icon">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                                <a href="www.google.com" class="icon">
+                                    <i class="fab fa-behance"></i>
+                                </a>
+                                <a href="www.google.com" class="icon">
+                                    <i class="fab fa-youtube"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="section sec4 blogs" data-id="blogs"></section>
         <section class="section sec5 contact" data-id="contact"></section>
     </main>
@@ -138,9 +167,11 @@
         <div class="control control-3 " data-id="portfolio">
             <i class="fa-solid fa-briefcase"></i>
         </div>
+        <!--
         <div class="control control-4 " data-id="blogs">
             <i class="fa-solid fa-newspaper"></i>
         </div>
+        -->
         <div class="control control-5 " data-id="contact">
             <i class="fa-solid fa-evernote-open"></i>
         </div>
